--- a/index.html
+++ b/index.html
@@ -232,12 +232,12 @@
             </div>
     
         <div id="rightme"> <h2>Sosyal Medya</h2> 
-            <center> <img src="C:\Users\sehab\Desktop\software\html\images\icons8-male-user-100.png" width="80" height="80"> </center> 
+            <center> <img src="icons8-male-user-100.png" width="80" height="80"> </center> 
             <div id="socialM">
                 <ul>
-                    <li> <a href="instagram.com"><img src="C:\Users\sehab\Desktop\software\html\images\icons8-instagram-100.png" width="20" height="20">İnstagram</a></li>
-                    <li> <a href="facebook.com"><img src="C:\Users\sehab\Desktop\software\html\images\icons8-facebook-100.png" width="20" height="20"> Facebook</a></li>
-                    <li> <a href="twitter.com"><img src="C:\Users\sehab\Desktop\software\html\images\icons8-twitter-100.png" width="20" height="20"> Twitter</a> </li>
+                    <li> <a href="instagram.com"><img src="icons8-instagram-100.png" width="20" height="20">İnstagram</a></li>
+                    <li> <a href="facebook.com"><img src="icons8-facebook-100.png" width="20" height="20"> Facebook</a></li>
+                    <li> <a href="twitter.com"><img src="icons8-twitter-100.png" width="20" height="20"> Twitter</a> </li>
                 </ul>   
             </div>   
         </div>
@@ -252,7 +252,7 @@
                     Umarım bende bu gelecekte teknolojinin gelişimine ayak uydurabileceğimi düşündüğüm icin bu bölümü sectim.
                 </div>
                 <div id="resim">
-                    <img width="600px" height="500px"  src="C:\Users\sehab\Desktop\software\html\images\HD-wallpaper-grayscale-of-man-using-laptop-coding.jpg" >
+                    <img width="600px" height="500px"  src="HD-wallpaper-grayscale-of-man-using-laptop-coding.jpg" >
                 </div>
                     <div class="temizle"></div>
                 </div>
