--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div id="menu" >
             <ul>
                 <li><a href="#color2">Ana Sayfa</a></li>
-                <li><a href="iletism.html">İletişim</a></li>
+                <li><a href="#">İletişim</a></li>
                 <li><a href="#container2">Hakkında</a></li>
             </ul>
         <div class="temizle"></div>
