--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 </button>
                 <div class="collapse navbar-collapse text-center" id="navbar-1" >
                     <ul class="navbar-nav" >
-                        <li class="nav-item p-4"><a class="nav-link" href="C:\Users\sehab\Desktop\software\html\site\anasayfav2.html">Ana Sayfa</a></li>
-                        <li class="nav-item p-4"><a class="nav-link" href="C:\Users\sehab\Desktop\software\html\site\hakkındav2.html">Hakkımda</a></li>
-                        <li class="nav-item p-4"><a class="nav-link" href="C:\Users\sehab\Desktop\software\html\site\ilteişimv2.html">İletişim</a></li>
-                        <li class="nav-item p-4"><a class="nav-link" href="C:\Users\sehab\Desktop\software\html\site\portv2.html">Portfolio</a></li>
+                        <li class="nav-item p-4"><a class="nav-link" href="https://github.com/sehabzks/sehabzks.github.io/blob/main/index.html">Ana Sayfa</a></li>
+                        <li class="nav-item p-4"><a class="nav-link" href="https://github.com/sehabzks/sehabzks.github.io/blob/main/Aboutme.html">Hakkımda</a></li>
+                        <li class="nav-item p-4"><a class="nav-link" href="https://github.com/sehabzks/sehabzks.github.io/blob/main/contact.html">İletişim</a></li>
+                        <li class="nav-item p-4"><a class="nav-link" href="https://github.com/sehabzks/sehabzks.github.io/blob/main/port.html">Portfolio</a></li>
 
                     </ul>
 
@@ -39,19 +39,19 @@
                     <div id="slider"class="carousel slide border border-dark " data-ride="carousel" data-interval="3000">
                         <div class="carousel-inner text-center text-white"style="height:500px">
                             <div class="carousel-item active ">
-                                <img src="C:\Users\sehab\Desktop\software\html\images\pankaj-patel-u2Ru4QBXA5Q-unsplash.jpg" width="100%" alt="">
+                                <img src="https://github.com/sehabzks/sehabzks.github.io/blob/main/blake-connally-IKUYGCFmfw4-unsplash%20(1).jpg" width="100%" alt="">
                             </div>
                             <div class="carousel-item ">
-                                <img src="C:\Users\sehab\Desktop\software\html\images\pankaj-patel-1IW4HQuauSU-unsplash.jpg" width="100%"alt="">
+                                <img src="https://github.com/sehabzks/sehabzks.github.io/blob/main/emile-perron-xrVDYZRGdw4-unsplash.jpg" width="100%"alt="">
                             </div>
                             <div class="carousel-item ">
-                                <img src="C:\Users\sehab\Downloads\blake-connally-IKUYGCFmfw4-unsplash (1).jpg" width="100%"alt="">
+                                <img src="https://github.com/sehabzks/sehabzks.github.io/blob/main/max-duzij-qAjJk-un3BI-unsplash.jpg" width="100%"alt="">
                             </div>
                             <div class="carousel-item ">
-                                <img src= "C:\Users\sehab\Downloads\emile-perron-xrVDYZRGdw4-unsplash.jpg"width="100%"alt="">
+                                <img src= "https://github.com/sehabzks/sehabzks.github.io/blob/main/pankaj-patel-1IW4HQuauSU-unsplash.jpg"width="100%"alt="">
                             </div>
                             <div class="carousel-item ">
-                                <img src="C:\Users\sehab\Downloads\max-duzij-qAjJk-un3BI-unsplash.jpg" width="100%"alt="">
+                                <img src="https://github.com/sehabzks/sehabzks.github.io/blob/main/pankaj-patel-u2Ru4QBXA5Q-unsplash.jpg" width="100%"alt="">
                             </div>
                         </div>
                         <a href="#slider"class="carousel-control-prev" data-slide="prev">
@@ -69,9 +69,9 @@
         <section class="bg-dark py-4">
             <div class="text-center text-white">
                 <ul style="list-style-type: none; text-decoration: none;">
-                    <li> <a href="instagram.com"><img src="C:\Users\sehab\Desktop\software\html\images\icons8-instagram-100.png" width="20" height="20">İnstagram</a></li>
-                    <li> <a href="facebook.com"><img src="C:\Users\sehab\Desktop\software\html\images\icons8-facebook-100.png" width="20" height="20"> Facebook</a></li>
-                    <li> <a href="twitter.com"><img src="C:\Users\sehab\Desktop\software\html\images\icons8-twitter-100.png" width="20" height="20"> Twitter</a> </li>
+                    <li> <a href="instagram.com"><img src="https://github.com/sehabzks/sehabzks.github.io/blob/main/icons8-instagram-100.png" width="20" height="20">İnstagram</a></li>
+                    <li> <a href="facebook.com"><img src="https://github.com/sehabzks/sehabzks.github.io/blob/main/icons8-facebook-100.png" width="20" height="20"> Facebook</a></li>
+                    <li> <a href="twitter.com"><img src="https://github.com/sehabzks/sehabzks.github.io/blob/main/icons8-twitter-100.png" width="20" height="20"> Twitter</a> </li>
                 </ul>   
 
             </div> 
