--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 </button>
                 <div class="collapse navbar-collapse text-center" id="navbar-1" >
                     <ul class="navbar-nav" >
-                        <li class="nav-item p-4"><a class="nav-link" href="https://github.com/sehabzks/sehabzks.github.io/blob/main/index.html">Ana Sayfa</a></li>
-                        <li class="nav-item p-4"><a class="nav-link" href="https://github.com/sehabzks/sehabzks.github.io/blob/main/Aboutme.html">Hakkımda</a></li>
-                        <li class="nav-item p-4"><a class="nav-link" href="https://github.com/sehabzks/sehabzks.github.io/blob/main/contact.html">İletişim</a></li>
-                        <li class="nav-item p-4"><a class="nav-link" href="https://github.com/sehabzks/sehabzks.github.io/blob/main/port.html">Portfolio</a></li>
+                        <li class="nav-item p-4"><a class="nav-link" href="index.html">Ana Sayfa</a></li>
+                        <li class="nav-item p-4"><a class="nav-link" href="Aboutme.html">Hakkımda</a></li>
+                        <li class="nav-item p-4"><a class="nav-link" href="contact.html">İletişim</a></li>
+                        <li class="nav-item p-4"><a class="nav-link" href="port.html">Portfolio</a></li>
 
                     </ul>
 
