--- a/Aboutme.html
+++ b/Aboutme.html
@@ -42,10 +42,10 @@
                 </button>
                 <div class="collapse navbar-collapse text-center" id="navbar-1" >
                     <ul class="navbar-nav" >
-                        <li class="nav-item p-4"><a class="nav-link" href="C:\Users\sehab\Desktop\software\html\site\anasayfav2.html">Ana Sayfa</a></li>
-                        <li class="nav-item p-4"><a class="nav-link" href="C:\Users\sehab\Desktop\software\html\site\hakkındav2.html">Hakkımda</a></li>
-                        <li class="nav-item p-4"><a class="nav-link" href="C:\Users\sehab\Desktop\software\html\site\ilteişimv2.html">İletişim</a></li>
-                        <li class="nav-item p-4"><a class="nav-link" href="C:\Users\sehab\Desktop\software\html\site\portv2.html">Portfolio</a></li>
+                        <li class="nav-item p-4"><a class="nav-link" href="index.html">Ana Sayfa</a></li>
+                        <li class="nav-item p-4"><a class="nav-link" href="Aboutme.html">Hakkımda</a></li>
+                        <li class="nav-item p-4"><a class="nav-link" href="contact.html">İletişim</a></li>
+                        <li class="nav-item p-4"><a class="nav-link" href="port.html">Portfolio</a></li>
 
                     </ul>
 
@@ -131,9 +131,9 @@
         <section class="bg-dark py-4">
             <div class="text-center text-white">
                 <ul style="list-style-type: none;">
-                    <li> <a href="instagram.com"><img src="C:\Users\sehab\Desktop\software\html\images\icons8-instagram-100.png" width="20" height="20">İnstagram</a></li>
-                    <li> <a href="facebook.com"><img src="C:\Users\sehab\Desktop\software\html\images\icons8-facebook-100.png" width="20" height="20"> Facebook</a></li>
-                    <li> <a href="twitter.com"><img src="C:\Users\sehab\Desktop\software\html\images\icons8-twitter-100.png" width="20" height="20"> Twitter</a> </li>
+                    <li> <a href="instagram.com"><img src="icons8-instagram-100.png" width="20" height="20">İnstagram</a></li>
+                    <li> <a href="facebook.com"><img src="icons8-facebook-100.png" width="20" height="20"> Facebook</a></li>
+                    <li> <a href="twitter.com"><img src="icons8-twitter-100.png" width="20" height="20"> Twitter</a> </li>
                 </ul>   
                 
             </div> 
